--- a/comprar-tickets.html
+++ b/comprar-tickets.html
@@ -136,7 +136,7 @@
                         </div>
                         <div class="row gx-2">
                             <div class="col-md mb-3">
-                                <button type="reset" class="w-100 btn btn-lg btn-form" id="btnBorrar">Borrar</button>
+                                <button type="button" class="w-100 btn btn-lg btn-form" id="btnBorrar">Borrar</button>
                             </div>
                             <div class="col-md mb-3">
                                 <button type="button" class="w-100 btn btn-lg btn-form" id="btnResumen">Resumen</button>
@@ -180,7 +180,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
-
+    <script src="js/comprar-tickets.js"></script>
 </body>
 
 </html>
